--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">MAINSPRING</p>
 				</div>
 				<div class="col">
-					<img src="assets/Mainspring_Main_Logo.png" alt="Company Logo">
+					<img src="Mainspring_Main_Logo.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
